# basic_Cpp_AD

./: .gitignore  CMakeLists.txt  README.md  oldMakefile
program_tests/: CMakeLists.txt  DirectedGraph.test.cc  Scalar.test.cc  computational_graph.test.cc  functions.test.cc  unit_class.test.cc
src/: CMakeLists.txt  DirectedGraph.h  Exceptions.h  Input.cc  Input.h  Operation.h  OperationBinary.h  OperationUnary.h  Scalar.cc  Scalar.h  ScalarAbs.cc  ScalarAbs.h  ScalarAdd.cc  ScalarAdd.h  ScalarDiv.cc  ScalarDiv.h  ScalarExp.cc  ScalarExp.h  ScalarLog.cc  ScalarLog.h  ScalarMul.cc  ScalarMul.h  ScalarSub.cc  ScalarSub.h  ScalarXpn.cc  ScalarXpn.h  Unit.h  Variable.h  backProp.cc  backProp.h  checks.h  forwardProp.cc  forwardProp.h  input_constant.h  main.cc  notes.txt  operation_constants.h  operations.h  util.h
